<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight">

    <LinearLayout
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context="com.example.essian.quizproject.MainActivity">


        <TextView
            style="@style/h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_title"/>


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/card">

            <EditText
                android:id="@+id/nameEditText"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your name"
                android:inputType="text"
                android:imeOptions="actionDone"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/card"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/medium_spacer">

                <TextView
                    android:id="@+id/questionBasting"
                    style="@style/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questionBasting"/>


                <RadioGroup
                    android:id="@+id/radio_group_basting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/basting_true"
                        style="@style/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/true_radio"/>

                    <RadioButton
                        android:id="@+id/basting_false"
                        style="@style/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/false_radio"/>
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/card"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/medium_spacer">

                <TextView
                    android:id="@+id/electricMachine"
                    style="@style/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questionElectricMachine"/>

                <EditText
                    android:id="@+id/electric_machine_answer"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionDone"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/card"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/medium_spacer">

                <TextView
                    android:id="@+id/needleEye"
                    style="@style/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questionNeedleEye"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <RadioGroup
                        android:id="@+id/radio_group_needle_eye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/needle_eye_tip"
                            style="@style/radioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/near_the_tip"/>

                        <RadioButton
                            style="@style/radioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/it_has_no_eye"/>

                        <RadioButton
                            style="@style/radioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/near_the_end"/>
                    </RadioGroup>
                </RelativeLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/card"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/medium_spacer">

                <TextView
                    android:id="@+id/timGunn"
                    style="@style/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questionTimGunn"/>

                <EditText
                    android:id="@+id/tim_gunn_answer"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionDone"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/card"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/medium_spacer">

                <TextView
                    android:id="@+id/treadle"
                    style="@style/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questionTreadle"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/white"
                    android:contentDescription="@string/treadle_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/treadle_machine"/>

                <EditText
                    android:id="@+id/treadle_answer"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionDone"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/card"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/medium_spacer">

                <TextView
                    android:id="@+id/big4"
                    style="@style/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questionBig4"/>

                <LinearLayout
                    android:id="@+id/big4CheckBoxes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/wide_margin"
                    android:layout_marginRight="@dimen/wide_margin"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/simplicity"
                            style="@style/checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/simplicity"/>

                        <CheckBox
                            android:id="@+id/burdastyle"
                            style="@style/checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/burdastyle"/>

                        <CheckBox
                            android:id="@+id/kwiksew"
                            style="@style/checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kwiksew"/>

                        <CheckBox
                            android:id="@+id/vogue"
                            style="@style/checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vogue"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/mccalls"
                            style="@style/checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mccalls"/>

                        <CheckBox
                            android:id="@+id/newlook"
                            style="@style/checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_look"/>

                        <CheckBox
                            android:id="@+id/burda"
                            style="@style/checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/burda"/>

                        <CheckBox
                            android:id="@+id/butterick"
                            style="@style/checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/butterick"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/card"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/medium_spacer">

                <TextView
                    android:id="@+id/questionOverlockerThreads"
                    style="@style/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questionOverlockerThreads"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/decrement_needles"
                        style="@style/smallButton"
                        android:text="@string/minus"/>

                    <TextView
                        android:id="@+id/needle_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/small_spacer"
                        android:textSize="@dimen/standard_text"/>

                    <Button
                        android:id="@+id/increment_needles"
                        style="@style/smallButton"
                        android:text="@string/plus"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            style="@style/h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/final_greeting"/>

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset_button"
                style="?attr/buttonBarPositiveButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/start_again"/>

            <android.support.v4.widget.Space
                android:id="@+id/spacer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/score_button"
                style="?attr/buttonBarPositiveButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/submit"/>
        </android.support.v7.widget.ButtonBarLayout>
    </LinearLayout>
</ScrollView>
